--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "dependencies": {
         "bower": "^1.3.12",
         "express": "^4.12.3"
+    },
+    "resolutions": {
+        "angular": "~1.3.x"
     }
 }
