--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,33 @@
 {
-    "name": "angular-seed",
-    "description": "A starter project for AngularJS",
-    "version": "0.0.0",
-    "homepage": "https://github.com/angular/angular-seed",
-    "license": "MIT",
-    "private": true,
-    "dependencies": {
-        "angular": "^1.3.0",
-        "json3": "^3.3.0",
-        "es5-shim": "^4.0.0",
-        "bootstrap": "^3.2.0",
-        "angular-route": "1.2.x",
-        "angular-loader": "1.2.x",
-        "angular-mocks": "~1.2.x",
-        "html5-boilerplate": "~4.3.0",
-        "angular-ui-router": "~0.2.13",
-        "animate.css": "~3.2.0",
-        "angular-animate": "~1.3.10",
-        "angular-ui-select": "~0.9.6",
-        "ngSanitize": "~0.0.2",
-        "angular-sanitize": "~1.3.11",
-        "angular-spinner": "~0.6.1",
-        "satellizer": "~0.9.2",
-        "leaflet": "0.7.x",
-        "angular-leaflet-directive": "~0.7.11",
-        "angular-bootstrap": "~0.12.1",
-        "angular-moment": "~0.9.0"
-    }
+  "name": "angular-seed",
+  "description": "A starter project for AngularJS",
+  "version": "0.0.0",
+  "homepage": "https://github.com/angular/angular-seed",
+  "license": "MIT",
+  "private": true,
+  "dependencies": {
+    "angular": "^1.3.0",
+    "json3": "^3.3.0",
+    "es5-shim": "^4.0.0",
+    "bootstrap": "^3.2.0",
+    "angular-route": "1.2.x",
+    "angular-loader": "1.2.x",
+    "angular-mocks": "~1.2.x",
+    "html5-boilerplate": "~4.3.0",
+    "angular-ui-router": "~0.2.13",
+    "animate.css": "~3.2.0",
+    "angular-animate": "~1.3.10",
+    "angular-ui-select": "~0.9.6",
+    "ngSanitize": "~0.0.2",
+    "angular-sanitize": "~1.3.11",
+    "angular-spinner": "~0.6.1",
+    "satellizer": "~0.9.2",
+    "leaflet": "0.7.x",
+    "angular-leaflet-directive": "~0.7.11",
+    "angular-bootstrap": "~0.12.1",
+    "angular-moment": "~0.9.0"
+  },
+  "resolutions": {
+    "angular": "1.3.15"
+  }
 }
