--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "bunchyAngularjs",
     "private": true,
     "version": "0.0.0",
+    "engines": {
+        "node": "0.12.2",
+        "npm": "2.7.4"
+    }
     "description": "A starter project for AngularJS",
     "repository": "https://github.com/angular/angular-seed",
     "license": "MIT",
